<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:gravity="center_horizontal"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="duosoft.gerprin.LoginActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:src="@drawable/logo"/>
    <ProgressBar
        android:id="@+id/PB_Login_Progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="50dp"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id="@+id/TIL_Login_Email">
        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/Email"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id="@+id/TIL_Login_Contraseña">
        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/Contraseña"/>
    </android.support.design.widget.TextInputLayout>
    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/Entrar"
        android:visibility="gone"
        android:onClick="login"
        android:id="@+id/B_Login_Entrar"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id="@+id/TV_Login_Olvido"
        android:paddingTop="28sp"/>





</LinearLayout>
